4.Gun/NetworkPolicy/frontend-backend-postgre/postgres-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
  namespace: postgres
spec:
  podSelector:
    matchLabels:
      run: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            ns: default
